@@ -1,5 +1,3 @@
-import re
-
 from django import forms
 from django.conf import settings
 from django.core.mail import send_mail
@@ -29,7 +27,6 @@ from app_settings import AuthenticationMethod
 import app_settings
 
 USERNAME_REGEX = UserCreationForm().fields['username'].regex
-username_min_length = app_settings.USERNAME_MIN_LENGTH
 
 class PasswordField(forms.CharField):
 
@@ -173,7 +170,7 @@ class BaseSignupForm(_base_signup_form_class()):
     username = forms.CharField(
         label = _("Username"),
         max_length = 30,
-        min_length = username_min_length,
+        min_length = app_settings.USERNAME_MIN_LENGTH,
         widget = forms.TextInput()
     )
     email = forms.EmailField(widget=forms.TextInput())
