@@ -1,3 +1,8 @@
+2012-10-03  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* account: Aldiantoro Nugroho contributed support for a new
+	setting: ACCOUNT_USERNAME_MIN_LENGTH
+
 2012-09-29  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* socialaccount: Added preliminary support for Mozilla Persona.
